--- a/scss/public.scss
+++ b/scss/public.scss
@@ -51,6 +51,7 @@ body {
     margin: 0 auto;
 }
 
+
 $width: 970px;
 
 .content {
@@ -60,6 +61,7 @@ $width: 970px;
     max-width: $width;
     @include clearfix();
 }
+
 
 $headerPhotoHeight: 80px;
 #headerPhoto {
@@ -87,23 +89,23 @@ $headerMenuHeight: 50px;
 #headerMenu {
     display: inline-block;
     width: 100%;
+    min-width: $width;
     height: $headerMenuHeight;
     text-align: center;
     background-color: RGBA(21, 22, 23, 1.00);
     @include clearfix();
 
     .content {
-        width: 720px;
-        max-width: 720px;
         text-align: center;
+        min-width: $width;
 
         .headerMenuItem {
             display: inline-block;
             float: left;
-            width: 120px;
+            width: calc(100% / 6);
             line-height: $headerMenuHeight;
             height: $headerMenuHeight;
-            font-size: 20px;
+            font-size: 25px;
             color: white;
         }
 
@@ -113,13 +115,9 @@ $headerMenuHeight: 50px;
 #mainSummaryTitle {
     display: inline-block; 
     float: left;
-    position: absolute;
-    left: 0;
-    top: $headerMenuHeight + $headerPhotoHeight;
-    right: 0;
-    bottom: 0;
     width: 100%;
-    height: calc(100% - $headerMenuHeight - $headerPhotoHeight);
+    min-width: $width;
+    height: 800px;
     background-color: RGBA(107, 108, 109, 1.00);
     text-align: center;
     @include clearfix();
@@ -128,15 +126,16 @@ $headerMenuHeight: 50px;
       position: relative;
       text-align: center;
       @include clearfix();
-
+      
       .time {
         display: inline-block;
         line-height: 200px;
         width: 100%;
         height: 200px;
         padding-top: 40px;
-        font-size: 20px;
+        font-size: 30px;
         font-style: bold;
+        font-weight: 900;
         color: RGBA(248, 248, 242, 1.00);
         @include clearfix();
       }
@@ -147,8 +146,9 @@ $headerMenuHeight: 50px;
         line-height: 150px;
         width: 100%;
         height: 150px;
-        font-size: 60px;
+        font-size: 100px;
         font-style: bold;
+        font-weight: 900;
         color: RGBA(248, 248, 242, 1.00);
         @include clearfix();
       }
@@ -157,36 +157,137 @@ $headerMenuHeight: 50px;
         display: inline-block;
         text-align: center;
         width: 100%;
-        max-width: 520px;
         height: 80px;
         padding: 10px;
-        font-size: 15px;
+        font-size: 28px;
         color: RGBA(248, 248, 242, 1.00);
         @include clearfix();
       }
 
       .buy {
         display: inline-block;
-        position: relative;
         width: 100%;
-        height: calc(100% - 150px -150px - 200px);
+        height: 100%;
         @include clearfix();
+        padding-top: calc((100% - 150px -  80px - 200px) / 4);
         
         > button {
             display: inline-block;
             @include clearfix();
-            font-size: 20px;
-            width: 200px;
-            height: 40px;
+            font-size: 30px;
+            width: 340px;
+            height: 60px;
             color: white;
             background-color: RGBA(250, 87, 46, 1.00);
-            @include border-radius(20px);
+            @include border-radius(30px);
             border: 0px;
+            outline:none;
+
+            &:hover { 
+                @include box-shadow(2px 2px 4px RGBA(39, 40, 34, 0.7));
+            }
 
         }
 
       }
    }
+}
+
+.title {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    height: 160px;
+    line-height:160px;
+    font-size: 70px;
+    font-style: bold;
+    font-weight: 900;
+}
+
+HR {
+    max-width: $width;
+}
+
+#band {
+    display: inline-block;
+    width: 100%;
+    max-height: 800px;
+    text-align: center;
+    @include clearfix();
+    .content{
+        display: inline-block;
+        text-align: center;
+        @include clearfix();
+        padding-top: 60px;
+        > div {
+          display: inline-block;
+          position: relative;
+          width: calc(100% / 3  - 60px);
+          height: 300px;
+          margin: 0 auto;
+          text-align: center;
+          @include clearfix();
+
+          &:nth-child(3n-1){
+             margin-left: 30px;
+             margin-right: 30px; 
+          }
+          &:nth-child(n+4){
+             margin-top: 30px;
+          }
+          .band {
+            display: inline-block;
+            float: left;
+            @include clearfix();
+            width: 100%;
+            height: 100%;
+            background-color: RGBA(171, 172, 173, 1.00);
+          }
+          .bandName {
+            display: inline-block;
+            position: absolute;
+            left: 0;
+            top: calc(100% - 40px);
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            background-color: RGBA(26, 27, 28, 1.00);
+            font-size: 15px;
+            font-style: bold;
+            font-weight: 800;
+            color: RGBA(247, 248, 248, 1.00);
+          }
+
+        }
+
+    }
+
+}
+
+
+.readMore {
+    display: inline-block;
+    float: left;
+    @include clearfix();
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    padding-top: 40px;
+
+    > button {
+        display: inline-block;
+        @include clearfix();
+        font-size: 20px;
+        width: 200px;
+        height: 40px;
+        color: RGBA(142, 143, 144, 1.00);
+        background-color: RGBA(250, 87, 46, 0.00);
+        @include border-radius(30px);
+        border: 1px solid RGBA(142, 143, 144, 1.00);
+        outline:none;
+
+    }
+
 }
 
 
