--- a/scss/public.scss
+++ b/scss/public.scss
@@ -8,26 +8,26 @@
   @include font-smoothing(antialiased);
 }
 
-.icon-bubbles2:before {
-  content: "\e96d";
+.icon-facebook:before {
+  content: "\e900";
 }
-.icon-user:before {
-  content: "\e971";
+.icon-profile:before {
+  content: "\e923";
 }
-.icon-users:before {
-  content: "\e972";
+.icon-location2:before {
+  content: "\e948";
 }
-.icon-search:before {
-  content: "\e986";
+.icon-clock:before {
+  content: "\e94e";
 }
-.icon-cog:before {
-  content: "\e994";
+.icon-share2:before {
+  content: "\ea82";
 }
-.icon-earth:before {
-  content: "\e9ca";
+.icon-twitter:before {
+  content: "\ea96";
 }
-.icon-facebook2:before {
-  content: "\ea91";
+.icon-linkedin2:before {
+  content: "\eaca";
 }
 
 
@@ -193,20 +193,6 @@ $headerMenuHeight: 50px;
    }
 }
 
-.title {
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-    height: 160px;
-    line-height:160px;
-    font-size: 70px;
-    font-style: bold;
-    font-weight: 900;
-}
-
-HR {
-    max-width: $width;
-}
 
 #band {
     display: inline-block;
@@ -279,7 +265,7 @@ HR {
         @include clearfix();
         font-size: 20px;
         width: 200px;
-        height: 40px;
+        height: 50px;
         color: RGBA(142, 143, 144, 1.00);
         background-color: RGBA(250, 87, 46, 0.00);
         @include border-radius(30px);
@@ -287,12 +273,306 @@ HR {
         outline:none;
 
     }
+}
+
+#Photos {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    min-height: 700px;
+    text-align: center;
+    @include clearfix();
+
+     .content{
+        display: inline-block;
+        text-align: center;
+        @include clearfix();
+        padding-top: 40px;
+ 
+        .bigPhoto {
+            display: inline-block;
+            float: left;
+            width: 100%;
+            height: 600px;
+            background-color: RGBA(171, 172, 173, 1.00);
+ 
+        }
+        .photo {
+            display: inline-block;
+            float: left;
+            width: calc((100% - 20px) /3 );
+            height: 150px;
+            background-color: RGBA(171, 172, 173, 1.00);
+            margin-top: 20px;
+
+            &:nth-child(2n-1){
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+            
+        }
+    
+    }    
+}
+
+#register {
+    display: inline-block;
+    width: 100%;
+    height: 150px;
+    text-align: center;
+    background-color: RGBA(255, 97, 51, 1.00);
+    @include clearfix();
+    
+    .content {
+        display: inline-block;
+        text-align: center;
+        @include clearfix();
+
+        .box {
+            display: inline-block;
+            @include clearfix();
+            width: 60px;
+            height: 100%;
+            line-height: 150px;
+            text-align: center;
+            
+            > div {
+            display: inline-block;
+            @include clearfix();
+            margin-top: 45px; 
+            width: 60px;
+            height: 60px;
+            background-color: RGBA(255, 168, 141, 1.00);
+            border: 1px solid RGBA(239, 113, 74, 1.00);
+      
+           }
+        }
+        
+        .registerMsg {
+            display: inline-block;
+            @include clearfix();
+            width: calc(100% - 220px - 120px);
+            height: 100%;
+            line-height: 150px;
+            text-align: center;
+            color: white;
+            font-weight: 800;
+            font-size: 40px;
+        }
+
+        .RegisterButton {
+            display: inline-block;
+            @include clearfix();
+            margin-top: 55px; 
+            width: 220px;
+            height: 100%;
+
+            > button {
+                display: inline-block;
+                @include clearfix(); 
+                width: 200px;
+                height: 50px;
+                color: white;
+                font-weight: 800;
+                font-size: 20px;
+                background-color: RGBA(250, 87, 46, 0);
+                @include border-radius(25px);
+                border: 4px solid RGBA(255, 217, 186, 1.00);
+                outline:none;
+            }
+        }
+
+    }
 
 }
 
 
+#see {
+    display: inline-block;
+    width: 100%;
+    height: 350px;
+    text-align: center;
+    background-color: RGBA(242, 242, 242, 1.00);
+    @include clearfix();
+
+    .sub {
+       display: inline-block;
+       float: left;
+       width: calc((100% - 40px) / 2 );
+       height: 100%; 
+       margin-right: 20px;
+       @include clearfix();
+
+       .title {
+          display: inline-block;
+          float: left;
+          height: 120px;
+          text-align: left;
+          padding-top: 60px;
+          font-size: 30px;
+          font-style: bold;
+          @include clearfix();
+       }
+
+       .msg {
+          display: inline-block;
+          float: left;
+          text-align: left;
+          font-size: 20px;
+          color: RGBA(131, 130, 131, 1.00);
+          @include clearfix();
+       }
+
+       .readMore {
+          display: inline-block;
+          height: 100px;
+          float: left;
+          text-align: left;
+          @include clearfix();
+       }
+    }
+}
+
+#title{
+    display: inline-block;
+    width: 100%;
+    height: 280px;
+    text-align: center;
+    @include clearfix();
+    
+    
+    .content {
+        display: inline-block;
+        height: 100%;
+
+        .subTitle {
+            padding-top: 80px;
+            height: 100px;
+            font-size: 25px;
+            color: RGBA(100, 100, 100, 1.00);
+        }
+
+        .title {
+            display: inline-block;
+            text-align: center;
+            width: 100%;
+            height: 160px;
+            line-height:160px;
+            font-size: 70px;
+            font-style: bold;
+            font-weight: 900;
+        }
+
+        > hr {
+            max-width: $width;
+        }
+    }
+}
 
 
+#info {
+    display: inline-block;
+    width: 100%;
+    height: 560px;
+    text-align: center;
+    padding-top: 40px;
+    @include clearfix();
+    
+    .content {
+        display: inline-block;
+        height: 100%;
+        @include clearfix();
+
+        > div {
+            display: inline-block;
+            float: left;
+            width: calc((100% - 20px) / 2 );
+            height: 100%;
+            @include clearfix();
+        }
+
+        .list {
+            text-align: left;
+            
+            > div > lebal {
+                display: inline-block;
+                float: left;
+                width: 25px;
+                height: 25px;
+                font-size: 30px;
+                color: RGBA(75, 75, 75, 1.00);
+                @include clearfix();
+            }
+
+            .title {
+                display: inline-block;
+                float: left;
+                width: calc(100% - 40px);
+                font-size: 25px;
+                font-style: bold;
+                font-weight: 700;
+                padding-left: 20px;
+                color: RGBA(40, 40, 40, 1.00);
+                @include clearfix();
+            }
+
+            .sub {
+                display: inline-block;
+                float: left;
+                width: 100%;
+                height: 100px;
+                padding-left: 50px;
+                color: RGBA(113, 113, 113, 1.00);
+                font-size: 25px;
+                @include clearfix();
+
+               > label {
+                    display: inline-block;
+                    float: left;
+                    width: 60px;
+                    height: 60px;
+                    font-size: 25px;
+                    text-align: center;
+                    line-height: 60px;
+                    margin-top: 10px;
+                    margin-right: 10px;
+                    background-color: RGBA(234, 234, 234, 1.00);
+                    @include border-radius(10px); 
+                    color: RGBA(107, 107, 107, 1.00);
+                    @include clearfix();
+               }
+            }
+           
+        }
+
+        .photo {
+            background-color: RGBA(171, 172, 173, 1.00);
+            margin-left: 20px;  
+        }
+      
+    }
+
+}
+
+#pay {
+    display: inline-block;
+    width: 100%;
+    height: 800px;
+    margin-top: 100px;
+    text-align: center;
+    @include clearfix();
+    background-color: RGBA(43, 38, 58, 1.00);
+
+    #title {
+        .subTitle{
+            color: RGBA(255, 255, 255, 1.00);
+        }
+        .title {
+            color: RGBA(255, 255, 255, 1.00);
+        }
+    }
+
+}
 
 
 
