--- a/scss/public.scss
+++ b/scss/public.scss
@@ -493,54 +493,56 @@ $headerMenuHeight: 50px;
 
         .list {
             text-align: left;
+            > div {
             
-            > div > lebal {
-                display: inline-block;
-                float: left;
-                width: 25px;
-                height: 25px;
-                font-size: 30px;
-                color: RGBA(75, 75, 75, 1.00);
-                @include clearfix();
-            }
-
-            .title {
-                display: inline-block;
-                float: left;
-                width: calc(100% - 40px);
-                font-size: 25px;
-                font-style: bold;
-                font-weight: 700;
-                padding-left: 20px;
-                color: RGBA(40, 40, 40, 1.00);
-                @include clearfix();
-            }
-
-            .sub {
-                display: inline-block;
-                float: left;
-                width: 100%;
-                height: 100px;
-                padding-left: 50px;
-                color: RGBA(113, 113, 113, 1.00);
-                font-size: 25px;
-                @include clearfix();
-
-               > label {
+                > label {
                     display: inline-block;
                     float: left;
-                    width: 60px;
-                    height: 60px;
-                    font-size: 25px;
-                    text-align: center;
-                    line-height: 60px;
-                    margin-top: 10px;
-                    margin-right: 10px;
-                    background-color: RGBA(234, 234, 234, 1.00);
-                    @include border-radius(10px); 
-                    color: RGBA(107, 107, 107, 1.00);
+                    width: 25px;
+                    height: 25px;
+                    font-size: 30px;
+                    color: RGBA(75, 75, 75, 1.00);
                     @include clearfix();
-               }
+                }
+
+                .title {
+                    display: inline-block;
+                    float: left;
+                    width: calc(100% - 40px);
+                    font-size: 25px;
+                    font-style: bold;
+                    font-weight: 700;
+                    padding-left: 20px;
+                    color: RGBA(40, 40, 40, 1.00);
+                    @include clearfix();
+                }
+
+                .sub {
+                    display: inline-block;
+                    float: left;
+                    width: 100%;
+                    height: 100px;
+                    padding-left: 50px;
+                    color: RGBA(113, 113, 113, 1.00);
+                    font-size: 25px;
+                    @include clearfix();
+
+                   > label {
+                        display: inline-block;
+                        float: left;
+                        width: 60px;
+                        height: 60px;
+                        font-size: 25px;
+                        text-align: center;
+                        line-height: 60px;
+                        margin-top: 10px;
+                        margin-right: 10px;
+                        background-color: RGBA(234, 234, 234, 1.00);
+                        @include border-radius(10px); 
+                        color: RGBA(107, 107, 107, 1.00);
+                        @include clearfix();
+                   }
+                }
             }
            
         }
