--- a/scss/public.scss
+++ b/scss/public.scss
@@ -134,8 +134,8 @@ $width: 970px;
     margin: 0 auto;
     @include clearfix();
     background-image: image-url('banner.jpg', false, false);
-    background-size: cover;
-    background-position: center;
+    background-size: auto;
+    background-position: left;
 
     .container{
         display: inline-block;
@@ -151,6 +151,9 @@ $width: 970px;
         margin-top: 100px;
         font-size: 20px;
         color: white;
+        @include range-width(0, 650px){
+                font-size: 10px;
+         };
 
        }
 
@@ -162,6 +165,10 @@ $width: 970px;
         margin: 0 auto;
         margin-top: 40px;
         color: white;
+        @include range-width(0, 650px){
+                font-size: 30px;
+
+        };
        }
 
        p {
@@ -173,6 +180,11 @@ $width: 970px;
             margin: 0 auto;
             margin-top: 40px;
             padding: 0 ;
+            @include range-width(0, 650px){
+                font-size: 15px;
+                padding-left: 10px;
+                padding-right: 10px;
+            };
        }
 
        a {
@@ -194,8 +206,141 @@ $width: 970px;
         }
        }
     }
+}
 
+#header2{
+    display: inline-block;
+    width:100%;
+    text-align: center;
+    margin: 0 auto;
+    @include clearfix();
 
+    .container{
+        display: inline-block;
+        width: 100%;
+        max-width: $width;
+        text-align: center;
+        margin: 0 auto;
+        @include clearfix();
+        
+        span{
+            display: inline-block;
+            margin-top: 50px;
+            font-size: 20px;
+            text-transform:uppercase;
+
+        }
+
+        h1 {
+            display: inline-block;
+            width: 100%;
+            margin: 0 auto;
+            margin-top: 20px;
+            font-size: 40px;
+        }
+
+        hr {
+            display: inline-block;
+            width: 100%;
+            margin: 0 auto;
+            margin-top: 30px;
+
+        }
+
+    }
+
+}
+
+#band{
+    display: inline-block;
+    width:100%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 80px;
+    @include clearfix();
+
+    .container{
+        display: inline-block;
+        width: 100%;
+        max-width: $width;
+        margin: 0 auto;
+        @include clearfix();
+
+        > div {
+            display: inline-block;
+            position: relative;
+            float: left;
+            width:calc((100% - 120px) /3 );
+            height: 250px;
+            background-color: RGBA(171, 172, 173, 1.00);
+            @include clearfix();
+            margin-right: 60px; 
+            text-align: center;
+
+            &:nth-child(3n){
+              margin-right: 0;
+            
+            }
+            &:nth-child(n+4){
+                margin-top: 60px;
+            
+            }
+
+            @include range-width(450px, 650px){
+                width:calc((100% - 20px) /2 );
+                margin-right: 0;
+
+                &:nth-child(2n+1){
+                  margin-right: 20px;
+                
+                }
+                &:nth-child(n+3){
+                    margin-top: 20px;
+                
+                }
+            };
+
+            @include range-width(0, 450px){
+                width:100%;
+                 &:nth-child(n+2){
+                    margin-top: 10px;
+            
+                }
+            };
+            > span {
+                display: inline-block;
+                height: 40px;
+                width: 100%;
+                position: absolute;
+                left: 0;
+                top: calc(100% - 40px);
+                line-height: 40px;
+                font-size: 15px;
+                font-style: bold;
+                color: white;
+                background-color: RGBA(26, 27, 28, 1.00);
+
+            }
+        }
+
+        > a {
+            display: inline-block;
+            width: 120px;
+            height: 40px;
+            line-height: 40px;
+            text-decoration: none;
+            margin-top: 40px;
+            color: RGBA(168, 169, 170, 1.00);
+            @include border-radius(20px);
+            border: 1px solid RGBA(168, 169, 170, 1.00);
+
+            &:hover {
+                color: white;
+                background-color: RGBA(168, 169, 170, 1.00);
+            }
+
+        }
+    }
 }
 
 
